# mochi-coco

./: .gitignore  README.md  example.py  pyproject.toml
chat_sessions/: 2bd92ff8c6.json  e2fa3e468d.json
docs/: custom_tools_implementation_plan.md  custom_tools_specification.md  dynamic_context_window_implementation_plan.md  feature_markdown-rendering.md  feature_plans.md  feature_tools.md
docs/tool_feature_implementation_plan/: phase0_client_updates.md  phase1_infrastructure.md  phase2_execution.md  phase3_streaming.md  phase4_5_persistence_testing.md
docs/tools/: user_guide.md
manual_testing/: chat_session_menu.md  edit_message.md  markdown_toggle.md  model_selector.md  starting_mochi-coco.md  testing_basic_features_mochi-coco.md  testing_mochi-coco.md  thinking_block_toggle.md
src/mochi_coco/: chat_controller.py  cli.py  user_prompt.py
tests/: test_async_ollama_client_tools.py  test_chat_session.py  test_e2e_tools.py  test_markdown_rendering.py  test_model_tracking.py  test_multiple_tool_calls.py  test_ollama_client.py  test_ollama_client_tools.py  test_system_prompt_command.py  test_system_prompt_fix.py  test_thinking_blocks.py  test_tool_aware_renderer.py  test_tool_confirmation_ui.py  test_tool_discovery.py  test_tool_execution.py  test_tool_execution_service.py  test_tool_history_rendering.py  test_tool_infrastructure.py  test_tool_integration.py
tests/integration/: test_chat_flow.py  test_chat_history.py  test_command_processing.py  test_rendering_flow.py  test_session_management.py
tool_examples/: __init__.py  file_operations.py  system_tools.py
(+30 files in other folders)
