[project]
name = "mochi-coco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lennart Pollvogt", email = "lennartpollvogt@protonmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.5.3",
    "ollama-instructor>=1.1.0",
    "ruff>=0.12.10",
    "typer>=0.16.1",
]

[project.scripts]
mochi-coco = "mochi_coco:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
